[project]
name = "cliboa"
description = "application framework for ETL(ELT) processing"
authors = [ { name = "BrainPad", email = "cliboa@brainpad.co.jp"} ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BrainPad/cliboa"
requires-python = ">=3.10,<4.0"
dynamic = ["dependencies", "version"]

keywords = ["etl", "elt", "data pipeline", "workflow", "automation", "framework"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

include = [
  "cliboa/cli/template/logging.conf",
]

[project.urls]
Homepage = "https://github.com/BrainPad/cliboa"
Documentation = "https://github.com/BrainPad/cliboa/wiki"
Repository = "https://github.com/BrainPad/cliboa"
Issues = "https://github.com/BrainPad/cliboa/issues"
ChangeLog = "https://github.com/BrainPad/cliboa/releases"

[project.scripts]
cliboadmin = "cliboa.cli.cliboadmin:main"

[tool.poetry]
version = "0.0.0" # overwritten by poetry-dynamic-versioning

[tool.poetry.dependencies]
# data handling
pandas = "^2.3.3"
dask = ">=2026.1.2"
numpy = "^1.26.4"
pyarrow = ">=23.0.0"
python-dateutil = "^2.9.0.post0"
PyYAML = "^6.0.3"
jsonlines = "^4.0.0"
cloudpickle = "^3.1.2"
# http, ssh
requests = "^2.32.5"
paramiko = "^3.5.1"
chardet = "^5.2.0"
# cloud platform
boto3 = "^1.42.41"
azure-storage-blob = "^12.28.0"
google-auth = "^2.48.0"
google-cloud-storage = "^3.9.0"
google-cloud-bigquery = "^3.40.0"
google-cloud-firestore = "^2.23.0"
# RDB
PyMySQL = "^1.1.2"
psycopg2-binary = "^2.9.1"
# utils
multiprocessing-logging = "^0.3.4"
python-gnupg = "^0.5.6"
cryptography = ">=44.0.3"
pydantic = "^2.12.5"
typing-extensions = "^4.15.0"
gspread = "^6.2.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
bandit = "^1.9.3"
black = ">=24.10.0"
isort = ">=5.13.2"
flake8 = "^7.0"
import-linter = "^1.12.1"
pytest = "^8.4.2"
pytest-cov = "^5.0"
mock = "^4.0.3"
xlsxwriter = "^3.0"
safety = "^3.7.0"
pyproject-flake8 = "^7.0.0"
pytest-timeout = "^2.4.0"
pytest-mock = "^3.15.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
{%- if distance == 0 -%}
    {{ serialize_pep440(base, stage, revision) }}
{%- else -%}
    {{ serialize_pep440(base, stage, revision, dev=distance) }}
{%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
